@@ -91,6 +91,9 @@ function admin_menu_init() {
     // Performance: Defer execution.
     drupal_add_js($path . '/admin_menu.js', array('defer' => TRUE));
 
+    // The destination query string for the current page is applied via JS.
+    drupal_add_js(array('admin_menu' => array('destination' => drupal_get_destination())), 'setting');
+
     if ($setting = variable_get('admin_menu_margin_top', 1)) {
       drupal_add_js(array('admin_menu' => array('margin_top' => $setting)), 'setting');
     }
@@ -141,6 +144,9 @@ function admin_menu_footer($main = 0) {
   if (!user_access('access administration menu') || admin_menu_suppress(FALSE)) {
     return;
   }
+  global $user, $language;
+
+  $cid = 'admin_menu:' . $user->uid . ':' . $language->language;
 
   // Check for the flag indicating that we need to rebuild.
   if (variable_get('admin_menu_rebuild_links', FALSE)) {
@@ -148,10 +154,22 @@ function admin_menu_footer($main = 0) {
     _admin_menu_rebuild_links();
     variable_del('admin_menu_rebuild_links');
   }
+  // Try to load and output administration menu from cache.
+  else {
+    $cache = cache_get($cid, 'cache_menu');
+    if ($cache && isset($cache->data)) {
+      return $cache->data;
+    }
+  }
 
+  // Rebuild the output.
   $content  = '<div id="admin-menu">';
   $content .= admin_menu_tree_output(menu_tree_all_data('admin_menu'));
   $content .= '</div>';
+
+  // Cache the menu for this user.
+  cache_set($cid, $content, 'cache_menu');
+
   return $content;
 }
 
@@ -188,9 +206,32 @@ function admin_menu_tree_output($tree) {
  * the admin menu links rendered.
  */
 function admin_menu_item_link($link) {
+  static $destination;
+
+  if (!isset($destination)) {
+    $destination = drupal_get_destination();
+  }
+
+  // Strip destination query string from href attribute and apply a CSS class
+  // for our JavaScript behavior instead.
+  $class = '';
+  if (!empty($link['localized_options']['query'])) {
+    if (is_array($link['localized_options']['query']) && isset($link['localized_options']['query']['destination']) && $link['localized_options']['query']['destination'] == $destination) {
+      unset($link['localized_options']['query']['destination']);
+      $class = ' class="admin-menu-destination"';
+    }
+    else {
+      $query = preg_replace('/&?' . preg_quote($destination, '/') . '/', '', $link['localized_options']['query']);
+      if ($query != $link['localized_options']['query']) {
+        $link['localized_options']['query'] = $query;
+        $class = ' class="admin-menu-destination"';
+      }
+    }
+  }
+
   // Omit alias lookups.
   $link['localized_options']['alias'] = TRUE;
-  return '<a href="'. check_url(url($link['href'], $link['localized_options'])) .'">'. (!empty($link['localized_options']['html']) ? $link['title'] : check_plain($link['title'])) .'</a>';
+  return '<a href="' . check_url(url($link['href'], $link['localized_options'])) . '"' . $class . '>' . (!empty($link['localized_options']['html']) ? $link['title'] : check_plain($link['title'])) . '</a>';
 }
 
 /**
@@ -262,6 +303,7 @@ function admin_menu_translated_menu_link_alter(&$item, $map) {
   if ($item['menu_name'] != 'admin_menu') {
     return;
   }
+  // Prepare links that would not be displayed normally.
   if ($access_all && !$item['access']) {
     $item['access'] = TRUE;
     // Prepare for http://drupal.org/node/266596
@@ -284,12 +326,6 @@ function admin_menu_translated_menu_link_alter(&$item, $map) {
   if ($item['link_path'] == 'http://drupal.org' && !user_access('display drupal links')) {
     $item['access'] = FALSE;
     return;
-  }
-  // Fix destination query strings
-  if (isset($item['localized_options']['query'])) {
-    if ($item['localized_options']['query'] == 'destination') {
-      $item['localized_options']['query'] = drupal_get_destination();
-    }
   }
   if ($extra = variable_get('admin_menu_display', 0)) {
     $item['title'] .= ' '. $extra[0] .': '. $item[$extra];
