@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+#349505 by smk-ka, sun: Performance: Added caching of entire menu output.
 #315342 by wulff: Added "My account" link (by splitting the "Log out" item).
 #384100 by kepol, sun: Fixed content-type items displayed in wrong place.
 #376816 by sun: Updated for compatibility for other JavaScript libraries.
